# trakt-serializd-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  env.example  pyproject.toml
.github/: AI-ATTRIBUTION.md
src/trakt_serializd_sync/: __init__.py  cli.py  config.py  consts.py  exceptions.py  models.py  retry.py  state.py  sync.py
src/trakt_serializd_sync/clients/: __init__.py  serializd.py  trakt.py
systemd/: trakt-serializd-sync.service
tests/: test_state.py
